--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 
       <!-- Optional hidden fields -->
       <input type="hidden" name="_captcha" value="false">
-      <input type="hidden" name="_next" value="https://bscs116.github.io/my-portfolio1/thank-you.html">
+      <input type="hidden" name="_next" value=" https://github.com/BSCS116/Syed-Kazim-Portfolio/thank-you.html">
 
       <div class="input-box">
         <input type="submit" class="send-btn" value="Send">
