Updated GitHub Link

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
     <div class="social-links">
       <a href="https://www.linkedin.com/in/syed-kazim-ali-39b128273" target="_blank" class="linkedin">LinkedIn</a>
       <a href="https://www.instagram.com/kazmi_syed605" target="_blank" class="instagram">Instagram</a>
-      <a href="https://github.com/bscs116" target="_blank" class="github">GitHub</a>
+      <a href="https://github.com/ItsKazmiZone" target="_blank" class="github">GitHub</a>
     </div>
   </div>
 </section>
@@ -405,7 +405,7 @@
 
       <!-- Optional hidden fields -->
       <input type="hidden" name="_captcha" value="false">
-      <input type="hidden" name="_next" value=" https://github.com/BSCS116/Syed-Kazim-Portfolio/thank-you.html">
+      <input type="hidden" name="_next" value=" https://github.com/ItsKazmiZone/Syed-Kazim-Portfolio/blob/main/thank-you.html">
 
       <div class="input-box">
         <input type="submit" class="send-btn" value="Send">
