--- a/index.html
+++ b/index.html
@@ -405,7 +405,8 @@
 
       <!-- Optional hidden fields -->
       <input type="hidden" name="_captcha" value="false">
-      <input type="hidden" name="_next" value=" https://github.com/ItsKazmiZone/Syed-Kazim-Portfolio/blob/main/thank-you.html">
+      thank-you.html
+      <input type="hidden" name="_next" value=" https://github.com/ItsKazmiZone/Syed-Kazim-Portfolio/thank-you.html">
 
       <div class="input-box">
         <input type="submit" class="send-btn" value="Send">
