--- a/index.html
+++ b/index.html
@@ -405,9 +405,7 @@
 
       <!-- Optional hidden fields -->
       <input type="hidden" name="_captcha" value="false">
-      thank-you.html
-      <input type="hidden" name="_next" value=" https://github.com/ItsKazmiZone/Syed-Kazim-Portfolio/thank-you.html">
-
+      <input type="hidden" name="_next" value="https://itskazmizone.github.io/Syed-Kazim-Portfolio/thank-you.html">
       <div class="input-box">
         <input type="submit" class="send-btn" value="Send">
       </div>
